--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
     compile "io.reactivex:rxandroid:1.1.0"
+
+    compile 'com.github.clans:fab:1.6.4'
 }
