--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     compile "io.reactivex:rxandroid:1.1.0"
 
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
