--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -20,6 +21,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding { enabled = true }
+    kapt { generateStubs = true }
 }
 
 dependencies {
@@ -35,12 +38,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
-    compile "io.reactivex:rxandroid:1.1.0"
-    compile 'com.github.clans:fab:1.6.4'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava:2.1.0"
+    implementation "io.reactivex:rxandroid:1.1.0"
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+
+    kapt 'org.androidannotations:androidannotations:4.3.1'
+    implementation 'org.androidannotations:androidannotations-api:4.3.1'
 }
